@@ -6,6 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -15,32 +16,34 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        //  Allow React frontend
-        config.setAllowedOrigins(List.of(
-                "http://localhost:5173",
-                "http://localhost:3000",
-                "http://127.0.0.1:5173"
-        ));
+        config.setAllowedOriginPatterns(List.of("*"));
 
-        //  Allow all HTTP methods
-        config.setAllowedMethods(List.of(
+        config.setAllowedMethods(Arrays.asList(
                 "GET", "POST", "PUT",
                 "DELETE", "PATCH", "OPTIONS"
         ));
 
-        //  Allow all headers including Authorization
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
 
-        //  Allow JWT token in header
+        config.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials"
+        ));
+
         config.setAllowCredentials(true);
-
-        //  How long browser caches preflight (seconds)
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
-
-        // Apply to ALL routes
         source.registerCorsConfiguration("/**", config);
         return source;
     }
